--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="assets/css/dashboard.css" />
 
     <!-- =====BOX ICONS===== -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
       rel="stylesheet"
     />
-  </head>
+  </head> -->
   <body>
     <h3>Hello ${pageContext.request.userPrincipal.name},</h3>
     <h4>Welcome to Dashboard Page!</h4>
@@ -31,6 +31,9 @@
             </li>
             <li class="nav__item">
               <a href="#about" class="nav__link">About</a>
+            </li>
+            <li class="nav__item">
+              <a href="#project" class="nav__link">Project</a>
             </li>
             <li class="nav__item">
               <a href="#skills" class="nav__link">Skills</a>
@@ -56,7 +59,7 @@
         <div class="home__data">
           <h1 class="home__title">
             Hi,<br />I'am <span class="home__title-color">Akhilesh</span><br />
-            Soft. Engineer
+            Senior Engineer
           </h1>
 
           <a href="#" class="button">Contact</a>
