Added the Project Tab

--- a/index.html
+++ b/index.html
@@ -124,6 +124,64 @@
           </div>
         </div>
       </section>
+      
+      <!--===== PROJECT =====-->
+      <section class="project section" id="project">
+        <h2 class="section-title">Project</h2>
+
+        <div class="project__container bd-grid">
+          <div class="project__content">
+            <img src="assets/images/project1.jpg" alt="" class="project__img" />
+            <h3 class="project__title">🏦 CLOS Integration Project – Newgen</h3>
+            <span style="font-weight: bold;">Overview :</span>
+            <br>
+            <span class="project__button">I contributed to the integration of Newgen’s Commercial Lending Origination System (CLOS), a platform designed to streamline and digitize the commercial loan lifecycle—from application to disbursement.</span>
+            <br><br>
+            <h3>My Role</h3>
+      <ul>
+        <li>
+           Developed and optimized JavaScript modules for dynamic form rendering
+          and validation.
+        </li>
+        <li>
+          Implemented matrix-based workflows to handle multi-stage loan
+          approvals.
+        </li>
+        <li>
+          Debugged and enhanced performance of document upload and PDF embedding
+          features.
+        </li>
+      </ul>
+      <h3>Key Highlights</h3>
+      <ul>
+        <li>
+          <strong>Improved turnaround time</strong> by 30% through automation of
+          manual underwriting steps.
+        </li>
+        <li>
+          Integrated REST APIs for real-time credit checks and document
+          verification.
+        </li>
+        <li>
+          Ensured scalability by modularizing code and optimizing DOM
+          interactions.
+        </li>
+      </ul>
+
+      <h3>Tech Stack</h3>
+      <p>JavaScript, HTML/CSS, REST APIs, PDF.js, GitHub, Agile (Scrum)</p>
+
+      <h3>Impact</h3>
+      <p>
+        The project significantly reduced loan processing time and improved user
+        experience for both internal teams and external applicants. It also laid
+        the groundwork for future integrations with banking CRMs and compliance
+        systems.
+      </p>
+          </div>
+         
+        </div>
+
 
       <!--===== SKILLS =====-->
       <section class="skills section" id="skills">
